--- a/templates/_includes/_navbar.html.twig
+++ b/templates/_includes/_navbar.html.twig
@@ -1,27 +1,33 @@
 <nav class="navbar navbar-default" id="sticker">
     <div>
         <!-- Brand and toggle get grouped for better mobile display -->
-            <div id="bs-example-navbar-collapse-1">
-                <ul class="navbar-display-row navbar-nav">
+        <div id="bs-example-navbar-collapse-1">
+            <ul class="navbar-display-row navbar-nav">
+                <li>
+                    <a href="{{ path('app_home') }}">Home</a>
+                </li>
+                <li>
+                    <a href="{{ path('app_listofcars') }}">Rent</a>
+                </li>
+                <li>
+                    <a href="{{ path('app_about') }}">About Us</a>
+                </li>
+                <li>
+                    <a href="{{ path('app_contact') }}">Contact Us</a>
+                </li>
+                {% if app.user %}
                     <li>
-                        <a href="{{ path('app_home') }}">Home</a>
+                        <a href="{{ path('app_logout') }}">Logout</a>
                     </li>
-                    <li>
-                        <a href="{{ path('app_listofcars') }}">Rent</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('app_about') }}">About Us</a>
-                    </li>
-                    <li>
-                        <a href="{{ path('app_contact') }}">Contact Us</a>
-                    </li>
+                {% else %}
                     <li>
                         <a href="{{ path('app_loginpage') }}">Login</a>
                     </li>
-                    <li>
-                        <a href="#">Admin</a>
-                    </li>
-                </ul>
+                {% endif %}
+                <li>
+                    <a href="#">Admin</a>
+                </li>
+            </ul>
         </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 </nav>
