--- a/templates/login.html.twig
+++ b/templates/login.html.twig
@@ -30,20 +30,25 @@
                         <div class="rq-login-form">
                             <form method="post">
                                 {% if error %}
-                                                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-                                                                {% endif %}
+                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+                                {% endif %}
 
-                                                                {% if app.user %}
-                                                                    <div class="mb-3">
-                                                                        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>
-                                                                    </div>
-                                                                {% endif %}
+                                {% if app.user %}
+                                    <div class="mb-3">
+                                        You are logged in as {{ app.user.userIdentifier }}, <a
+                                                href="{{ path('app_logout') }}">Logout</a>
+                                    </div>
+                                {% endif %}
                                 <div class="row">
                                     <div class="col-md-5">
-                                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="rq-form-control" placeholder="Your email" autocomplete="email" required autofocus>
+                                        <input type="email" value="{{ last_username }}" name="email" id="inputEmail"
+                                               class="rq-form-control" placeholder="Your email" autocomplete="email"
+                                               required autofocus>
                                     </div>
                                     <div class="col-md-5">
-                                        <input type="password" name="password" id="inputPassword" class="rq-form-control"  placeholder="Your password" autocomplete="current-password" required>
+                                        <input type="password" name="password" id="inputPassword"
+                                               class="rq-form-control" placeholder="Your password"
+                                               autocomplete="current-password" required>
                                     </div>
 
                                     <input type="hidden" name="_csrf_token"
@@ -51,7 +56,8 @@
                                     >
 
                                     <div class="col-md-2">
-                                        <button type="submit" class="rq-btn rq-btn-primary fluid border-radius">Login <i class="arrow_right"></i></button>
+                                        <button type="submit" class="rq-btn rq-btn-primary fluid border-radius">Login <i
+                                                    class="arrow_right"></i></button>
                                     </div>
                                     <div class="col-md-12">
                                         <div class="rq-checkbox">
@@ -72,42 +78,42 @@
                                 </div>
                             </form>
 
-{#                            <form method="post">#}
-{#                                {% if error %}#}
-{#                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>#}
-{#                                {% endif %}#}
+                            {#                            <form method="post"> #}
+                            {#                                {% if error %} #}
+                            {#                                    <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div> #}
+                            {#                                {% endif %} #}
 
-{#                                {% if app.user %}#}
-{#                                    <div class="mb-3">#}
-{#                                        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a>#}
-{#                                    </div>#}
-{#                                {% endif %}#}
+                            {#                                {% if app.user %} #}
+                            {#                                    <div class="mb-3"> #}
+                            {#                                        You are logged in as {{ app.user.userIdentifier }}, <a href="{{ path('app_logout') }}">Logout</a> #}
+                            {#                                    </div> #}
+                            {#                                {% endif %} #}
 
-{#                                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>#}
-{#                                <label for="inputEmail">Email</label>#}
-{#                                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus>#}
-{#                                <label for="inputPassword">Password</label>#}
-{#                                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required>#}
+                            {#                                <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1> #}
+                            {#                                <label for="inputEmail">Email</label> #}
+                            {#                                <input type="email" value="{{ last_username }}" name="email" id="inputEmail" class="form-control" autocomplete="email" required autofocus> #}
+                            {#                                <label for="inputPassword">Password</label> #}
+                            {#                                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" required> #}
 
-{#                                <input type="hidden" name="_csrf_token"#}
-{#                                       value="{{ csrf_token('authenticate') }}"#}
-{#                                >#}
+                            {#                                <input type="hidden" name="_csrf_token" #}
+                            {#                                       value="{{ csrf_token('authenticate') }}" #}
+                            {#                                > #}
 
-{#                                #}{##}
-{#                                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.#}
-{#                                See https://symfony.com/doc/current/security/remember_me.html#}
+                            {#                                #}{# #}
+                            {#                                Uncomment this section and add a remember_me option below your firewall to activate remember me functionality. #}
+                            {#                                See https://symfony.com/doc/current/security/remember_me.html #}
 
-{#                                <div class="checkbox mb-3">#}
-{#                                    <label>#}
-{#                                        <input type="checkbox" name="_remember_me"> Remember me#}
-{#                                    </label>#}
-{#                                </div>#}
-{#                                #}
+                            {#                                <div class="checkbox mb-3"> #}
+                            {#                                    <label> #}
+                            {#                                        <input type="checkbox" name="_remember_me"> Remember me #}
+                            {#                                    </label> #}
+                            {#                                </div> #}
+                            {#                                #}
 
-{#                                <button class="btn btn-lg btn-primary" type="submit">#}
-{#                                    Sign in#}
-{#                                </button>#}
-{#                            </form>#}
+                            {#                                <button class="btn btn-lg btn-primary" type="submit"> #}
+                            {#                                    Sign in #}
+                            {#                                </button> #}
+                            {#                            </form> #}
 
                         </div> <!-- end login div -->
                     </div>
@@ -116,29 +122,34 @@
                     <div class="container">
                         <div class="rq-login-form no-border">
                             <h4>Don't have an account! Register now </h4>
-                            <form class="form-horizontal"  action="#" method="post" >
+                            <form class="form-horizontal" action="#" method="post">
                                 <div class="row">
                                     <div class="col-md-4">
                                         <input type="text" class="rq-form-control reverse" placeholder="Name" required>
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="text" class="rq-form-control reverse" placeholder="Username" required>
+                                        <input type="text" class="rq-form-control reverse" placeholder="Username"
+                                               required>
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="password" class="rq-form-control reverse" placeholder="Password" required>
+                                        <input type="password" class="rq-form-control reverse" placeholder="Password"
+                                               required>
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="email" class="rq-form-control reverse" placeholder="Email Address" required>
+                                        <input type="email" class="rq-form-control reverse" placeholder="Email Address"
+                                               required>
                                     </div>
                                     <div class="col-md-4">
                                         <input type="text" class="rq-form-control reverse" placeholder="Phone" required>
                                     </div>
                                     <div class="col-md-4">
-                                        <input type="password" class="rq-form-control reverse" placeholder="Re - Password" required>
+                                        <input type="password" class="rq-form-control reverse"
+                                               placeholder="Re - Password" required>
                                     </div>
                                     <div class="col-md-12">
                                         <div class="register-button">
-                                            <button type="submit" class="rq-btn rq-btn-primary border-radius">Register <i class="arrow_right"></i></button>
+                                            <button type="submit" class="rq-btn rq-btn-primary border-radius">Register
+                                                <i class="arrow_right"></i></button>
                                         </div>
                                     </div>
                                 </div> <!-- end of registration section -->
@@ -152,6 +163,6 @@
     </div> <!-- end #main-wrapper -->
 
     <script src="{{ asset('js/jquery.min.js') }}"></script>
-    <script src="{{ asset('js/scripts.js') }}" ></script>
+    <script src="{{ asset('js/scripts.js') }}"></script>
 
 {% endblock %}
